# FieldOpt-H5-ConversionTool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
FieldOpt-H5-ConversionTool/: CMakeLists.txt  main.cpp
FieldOpt-H5-ConversionTool/doc/: FieldOpt-H5-ConversionTool-doc.aux  FieldOpt-H5-ConversionTool-doc.out  FieldOpt-H5-ConversionTool-doc.tex  cleanall.sh
FieldOpt-H5-ConversionTool/doc/parts/: 001-description.tex  002-how-to.tex  conv-params-example.json
FieldOpt-H5-ConversionTool/doc/preambles/: preamble-addon-colors.tex  preamble-scrartcl.tex
FieldOpt-H5-ConversionTool/example/5spot/: .gitignore  ECL_5SPOT.DATA
FieldOpt-H5-ConversionTool/input/: conv-params-example.json  conv-params.json
FieldOpt-H5-ConversionTool/src/: H5Conv.cpp  H5Conv.h  colors.hpp
FieldOpt-H5-ConversionTool/tests/example-model/5spot/: fort.66
